Fill slide about web mapping modules et al.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -401,21 +401,23 @@ console.log(projected);
 
                 <section>
                     <section>
-                        <h2>Web map (Leaflet oder ol3)</h2>
+                        <h2>Web mapping Module</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li><code>openlayers</code></li>
+                            <li><code>leaflet</code> + Plugins</li>
+                            <li><code>d3</code> + Plugins</li>
+                            <li>
+                                <code>ol-app-setup</code>
+                                <pre><code data-trim contenteditable>
+>> ol-app-setup -t /tmp/foo -v ol3 -s
+                                </code></pre>
+                            </li>
+                            <li>
+                                Zur Entwicklung an vielen Projekten gehört
+                                Node.js fest dazu
+                            </li>
+                            <li>vgl. a. PostgreSQL: PL/v8</li>
                         </ul>
-                    </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
                     </section>
                 </section>
 
