Add comment regarding full application.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -421,6 +421,11 @@ console.log(projected);
                     </section>
                 </section>
 
+                <!--
+                 | MJ: Brauchen wir das noch, wir habe schon sehr viel content?
+                 |     Du darfst frei entscheidne, ob Du hier noch was feines
+                 |     bastelst
+                 |-->
                 <section>
                     <section>
                         <h2>Alles zusammen in Action</h2>
