Fill final slides with conclusion.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -449,11 +449,17 @@ console.log(projected);
                 <section>
                     <h2>Fazit / Message</h2>
                     <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
+                        <li>Node.js &amp; npm sind eine wunderbare Kombination</li>
+                        <li>&hellip;mit Stärken und Schwächen</li>
+                        <li>&hellip;bei gleichzeitig unglaublichem Drive</li>
+                        <li>&hellip;und riesiger Entwicklergrundgesamtheit</li>
                     </ul>
+                </section>
+
+                <section>
+                    <h2 class="force-natural-case">Give it a try!</h2>
+                    <hr>
+                    <h1 class="force-natural-case">Es macht echt Spaß damit zu arbeiten</h1>
                 </section>
 
                 <section>
