--- a/nodejs-examples/ol3-example/index.html
+++ b/nodejs-examples/ol3-example/index.html
@@ -5,17 +5,30 @@
     <link rel="stylesheet" href="libs/ol.css" type="text/css">
     
     <style>
+      body {
+        font-family: sans-serif;
+      }
       .map {
         height: 400px;
         width: 100%;
       }
+      #ladebalken {
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        -moz-box-shadow:    inset 0 0 10px #000000;
+        -webkit-box-shadow: inset 0 0 10px #000000;
+        box-shadow:         inset 0 0 10px #000000;
+      }
     </style>
   </head>
   <body onload="init()">
-    <button onclick="loadService()">Lade Daten</button>
     <div id="map" class="map"></div>
+    <p>
+        Show the OSM changesets of the last 15 seconds
+    </p>
+    <span id="ladebalken" style="display: block; background: rgba(0, 60, 136, 0.7); width: 0px;">&nbsp;</span>
     <script src="libs/jquery.js"></script>
-    
     <script src="libs/ol.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
   </body>
