--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -68,9 +68,19 @@
                     <h2>Christian Mayer</h2>
                     <img src="img/cm.jpg">
                     <ul>
-                        <li>Kernentwickler GeoExt</li>
+                        <li>Softwareentwickler &amp; -architekt</li>
+                        <li>Vornehmlich im GIS-Bereich</li>
+                        <li>Open Source Enthusiast
+                            <ul>
+                                <li>Kernentwickler GeoExt</li>
+                                <li>OpenLayers, GeoTools, ...</li>
+                            </ul>
+                        </li>
                         <li>OSGeo Foundation Charter Member</li>
                     </ul>
+                    <div style="width: 75%">
+                        <img class="plain contrast" alt="meggsimum.de Logo" src="img/logo-meggsimumde.jpg" style="clear: right;float: left; width: 100%">
+                    </div>
                 </section>
 
                 <section id="author-marc-jansen" class="author">
@@ -86,6 +96,7 @@
                     </ul>
                 </section>
 
+                <!--
                 <section id="about-company-meggsimum">
                     <h2>meggsimum</h2>
                     <div class="split-info">
@@ -104,6 +115,7 @@
                         </div>
                     </div>
                  </section>
+                -->
 
                 <section id="about-company-terrestris">
                     <h2 class="force-natural-case">terrestris</h2>
