--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -444,7 +444,7 @@ console.log(projected);
                     <ul>
                         <li>Node.js &amp; npm sind eine wunderbare Kombination</li>
                         <li>&hellip;auch im GIS-Bereich</li>
-                        <li>&hellip;mit Stärken und Schwächen</li>
+                        <li>&hellip;mit Stärken und Schwächen (wie immer 😄)</li>
                         <li>&hellip;bei gleichzeitig unglaublichem Drive</li>
                         <li>&hellip;und riesiger Entwicklergrundgesamtheit</li>
                         <li>&hellip;also eine echte Alternative</li>
